syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service CompanyJob{
	rpc GetCompanyJob(CompanyJobIdRequest) returns (CompanyJobReply);
	rpc GetAllCompanyJob(google.protobuf.Empty) returns (CompanyJobList);
	rpc AddCompanyJob(CompanyJobList) returns (google.protobuf.Empty);
	rpc UpdateCompanyJob(CompanyJobList) returns (google.protobuf.Empty);
	rpc DeleteCompanyJob(CompanyJobList) returns (google.protobuf.Empty);
}

message CompanyJobIdRequest{
	string Id = 1;
}

message CompanyJobReply{
	string Id = 1;
	string Company = 2;
	google.protobuf.Timestamp ProfileCreated = 3;
	bool IsInactive = 4;
	bool IsCompanyHidden = 5;
	bytes TimeStamp = 6;
}

message CompanyJobList{
	repeated CompanyJobReply CompanyJobs = 1;
}